<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="error_place_holder">Error Happend.Try again!</string>
    <string name="timeout_error">Quá thời gian kết nối máy chủ</string>
    <string name="lable_forget_password">Quên / Đổi mật khẩu</string>
    <string name="lable_register_account"><u>Đăng ký tài khoản</u></string>
    <string name="lable_title">Sức khoẻ trong tầm tay</string>
    <string name="lable_title_another_login">Hoặc đăng nhập qua:</string>
    <string name="btn_login_with_zalo">Đăng nhập với Zalo</string>
    <string name="btn_login_with_facebook">Đăng nhập với Facebook</string>
    <string name="btn_login_with_Apple">Đăng nhập với Apple</string>
    <string name="btn_login_with_google">Đăng nhập với Google</string>
    <string name="lable_account">demo1@example.com</string>
    <string name="btn_login">ĐĂNG NHẬP</string>
    <string name="lable_password">Abcd!234</string>
    <string name="str_login_validate_user_name">Bạn chưa nhập tài khoản</string>
    <string name="error_400">Có lỗi xãy ra!</string>
    <string name="error_422">HTTP 422 Unprocessable Content</string>
    <string name="str_login_error_400">Đăng nhập thất bại. Vui lòng kiểm tra thông tin đăng nhập!</string>
    <string name="str_login_error_422">Email hoặc số điện thoại không hơp lệ.</string>
    <string name="str_empty_username">Bạn chưa nhập tài khoản</string>
    <string name="str_empty_password">Bạn chưa nhập password</string>
    <string name="str_empty_all">Vui lòng nhập tài khoản và mật khẩu</string>
    <string name="str_login_success">Đăng nhập thành công</string>
    <string name="error_receiving_api">Error Receiving Api</string>
    <string name="disconect">Không có kêt nối</string>
    <string name="btn_header_left_top">Hồ sơ bệnh án</string>
    <string name="btn_header_right_top">Liên hệ bác sĩ tư vấn</string>
    <string name="btn_header_left_bottom">Cập nhật kết quả xét nghiệp</string>
    <string name="btn_header_right_bottom">Đặt lịch khám</string>
    <string name="tab_home">Trang chủ</string>
    <string name="title_patient">Khám bệnh</string>
    <string name="title_test">Xét nghiệm</string>
    <string name="title_brief">Hồ sơ</string>
    <string name="title_account">Tài khoản</string>
    <string name="lable_name">Nguyễn Thu Hương</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lable_infectious_hepatitis">Truyền nhiễm - Viêm gan</string>
    <string name="label_endocrine_diabetes">Nội tiết - Đái tháo đường</string>
    <string name="label_heart_blood_pressure">Tim mạch - Huyết áp</string>
    <string name="label_tumor">Ung bướu</string>
    <string name="label_urinary_kidney">Thận - Tiết niệu</string>
    <string name="label_digestion">Tiêu hoá</string>
    <string name="label_musculoskeletal">Cơ xương khớp</string>
    <string name="label_Respiratory_copd">Hô hấp - COPD</string>
    <string name="lable_ear_nose_throat">Tai - Mủi - Họng</string>
    <string name="label_dentomaxillofacial">Răng - Hàm - Mặt</string>
    <string name="label_surgery">Ngoại khoa</string>
    <string name="title_highlights">Nổi bật</string>
    <string name="lable_notification">2</string>
    <string name="lable_specialist">Chuyên khoa</string>
    <string name="lable_service">Dịch vụ</string>
    <string name="lable_kham_suc_khoe_co_quan">Khám sức khoẻ cơ quan</string>
    <string name="lable_cham_soc_y_te">Chăm sóc y tế tại nhà</string>
    <string name="lable_lay_mau">Lấy máu tại nhà</string>
    <string name="lable_tam_soat_ung_thu">Tầm soát ung thư</string>
    <string name="lable_kham_tong_quat">Khám tổng quát</string>
    <string name="dialog_title_my_pref">my_pref_login</string>
    <string name="dialog_title_key_pref">Save_pref_login</string>
    <string name="lable_Logged">Chào mừng trở lại</string>
    <string name="tab_status_tablayout">status</string>
    <string name="lable_text_kqxt_mau">KQXT Máu</string>
    <string name="lable_test_file">File đính kèm</string>
    <string name="lable_test_image">Ảnh</string>
    <string name="lable_delete">Xoá</string>
    <string name="text_ThS">ThS</string>
    <string name="text_TS">TS</string>
    <string name="settext_tien_si">Tiến sỹ</string>
    <string name="settext_thac_si">Thạc sỹ</string>
    <string name="lable_cm">cm</string>
    <string name="lable_kg">kg</string>
    <string name="btn_update">Cập nhật</string>
    <string name="hint_diagnostic">Chuẩn đoán</string>
    <string name="hint_blood">Nhóm máu</string>
    <string name="weight">Cân nặng</string>
    <string name="hint_height">Chiều cao</string>
    <string name="lable_address">Tầng 4, Toà nhà H10, Số 2 ngõ 475, Thanh Xuân, Hà Nội</string>
    <string name="lable_male">Nam</string>
    <string name="lable_birthday">24 / 04 / 1986</string>
    <string name="lable_female">Nữ</string>
    <string name="lable_other">Khác</string>
    <string name="title_health">Thông tin sức khoẻ</string>
    <string name="title_individual">Thông tin cá nhân</string>
    <string name="title_create_profile">Tạo Hồ sơ</string>
    <string name="lable_phone">0979 017 899</string>
    <string name="lable_add_new">Tạo mới</string>
    <string name="medical_examination_history">Lịch sử khám bệnh</string>
    <string name="lable_day">30 / 11 / 2001</string>
    <string name="lable_list_patient">Danh sách lịch khám</string>
    <string name="lable_blood_group">Nhóm máu</string>
    <string name="lable_offline">Trực tiếp</string>
    <string name="lable_online">Trực tuyến</string>
    <string name="lable_title_account">Tài khoản</string>
    <string name="lable_create_account">Thiết lập tài khoản</string>
    <string name="lable_history_account">Lịch sử hoạt đông</string>
    <string name="label_create_app">Thiết lập ứng dụng</string>
    <string name="label_logout">Đăng xuất</string>
    <string name="label_canceled">Đã huỷ</string>
    <string name="lable_address_user">ĐC: Toà H10, 477 Nguyễn Trãi</string>
    <string name="label_detailed_phone">ĐT: 0979 017 899</string>
    <string name="label_dortor_name">Bsi. Thân Mạnh Hùng</string>
    <string name="label_doctor_service">Phó trưởng khoa cấp cứu</string>
    <string name="label_detailed_time">11:00 - 11:30</string>
    <string name="label_detailed_note"><u>Ghi chú:</u></string>
    <string name="see_medical_examination_results">Xem kết quả khám bênh</string>
    <string name="label_detailed_medical_examination">Chi tiết lịch đã khám</string>
    <string name="label_update_medical_exammination">CẬP NHẬT KQKB</string>
    <string name="label_update_if_any">cập nhật KQXN, chụp chiếu (nếu có)</string>
    <string name="label_update_medical_examination">Huỷ đặt lịch khám</string>
    <string name="label_order_medical_examination">Chi tiết đăt lịch khám</string>
    <string name="label_login">MEMBER LOGIN</string>
    <string name="label_forgot_password">Quên mật khẩu</string>
    <string-array name="Spinner">
        <item>Việt Nam</item>
        <item>Ấn Độ</item>
        <item>Hoa Kỳ</item>
        <item>Indonesia</item>
        <item>Trung Quốc</item>
    </string-array>
    <string name="btn_login_title">Đăng nhập</string>
    <string name="login_username_hint">Email</string>
    <string name="login_password_hint">Mật khẩu</string>
    <string name="login_validate_user_name">Vui lòng nhập Email!</string>
    <string name="login_validate_password">Vui lòng nhập Mật khẩu!</string>
    <string name="login_successful">Đăng nhập thành công!</string>
    <string name="login_failed">Đăng nhập thất bại!</string>
    <string name="account_logout_success">Đăng xuất thành công!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="request_select_people">Tìm kiếm</string>
    <string name="login_validate_user_name_not_email">Vui lòng nhập đúng định dạng email!</string>
    <string name="tab_address" tools:ignore="ExtraTranslation">Địa điểm</string>
    <string name="tab_barber_name" tools:ignore="ExtraTranslation">Thợ cắt</string>
    <string name="tab_account" tools:ignore="ExtraTranslation">Tài khoản</string>
    <string name="tab_service" tools:ignore="ExtraTranslation">Dịch vụ</string>
    <string name="tab_customer" tools:ignore="ExtraTranslation">Bệnh nhân</string>
    <string name="facebook_app_id">554349877201799</string>
    <string name="fb_login_protocol_scheme">fb554349877201799</string>
    <string name="facebook_client_token">0ec6658987bcddfaaa9d4918f91e063e</string>
    <string name="web_client_token_id">298808374975-0k482n9imogbp9sflh1kt0f484atus6b.apps.googleusercontent.com</string>
    <string name="register_password_hint"><![CDATA[Mật khẩu<br/><font color=\'#DC2220\'><i>(ít nhất 6 ký tự cả chữ hoa,chữ thường và số)</i></font>]]></string>
    <string name="register_input_email">Vui lòng nhập Email!</string>
    <string name="register_input_birthday">Chọn ngày sinh</string>
    <string name="register_input_email_max_length">Vui lòng nhập Email lớn nhất 100 ký tự!</string>
    <string name="register_input_email_not_email">Vui lòng nhập đúng định dạng email!</string>
    <string name="register_input_password">Vui lòng nhập mật khẩu!</string>
    <string name="register_input_password_max_length">Vui lòng nhập Mật khẩu lớn nhất 50 ký tự!</string>
    <string name="register_input_password_min_length">Vui lòng nhập Mật khẩu ít nhất 6 ký tự!</string>
    <string name="register_input_password_not_password">Vui lòng nhập đúng định dạng mật khẩu!</string>
    <string name="register_input_confirm_password">Vui lòng nhập lại mật khẩu!</string>
    <string name="register_input_confirm_password_not_match">Vui lòng nhập lại mật khẩu khớp với mật khẩu!</string>
    <string name="register_input_name">Vui lòng nhập họ và tên!</string>
    <string name="register_input_name_max_length">Vui lòng nhập Mật khẩu lớn nhất 255 ký tự!</string>
    <string name="register_chose_birthday">Vui lòng chọn ngày sinh!</string>
    <string name="register_chose_gender">Vui lòng chọn giới tính!</string>
    <string name="register_input_phone">Vui lòng nhập số điện thoại!</string>
    <string name="register_input_email_not_phone">Vui lòng nhập đúng định dạng số điện thoại!</string>
    <string name="register_input_address">Vui lòng nhập địa chỉ!</string>
    <string name="register_input_address_max_length">Vui lòng nhập địa chỉ lớn nhất 255 ký tự!</string>
    <string name="list_address_title">Quản lý Phòng khám</string>
    <string name="list_address_add">Tạo mới</string>
    <string name="list_address_null">Chưa có địa chỉ Phòng khám</string>
    <string name="add_address_title">Thêm Phòng khám</string>
    <string name="add_address_name">Nhập tên Phòng khám</string>
    <string name="add_address_address">Nhập Địa chỉ</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_choso_picture">Chọn ảnh</string>
    <string name="dialog_option_title">Hình thức ảnh</string>
    <string name="dialog_take_photo">Chụp ảnh</string>
    <string name="add_service_title">Thêm Khoa khám</string>
    <string name="add_service_complete">Hoàn tất</string>
    <string name="list_customer_title">Danh sách Khách hàng</string>
    <string name="list_customer_add">Tạo mới</string>
    <string name="list_customer_null">Chưa có Khách hàng.</string>
    <string name="str_service_name">Tên Khoa <font color='#0957DF'>*</font></string>
    <string name="str_service_barber_shop">Phòng khám <font color='#0957DF'>*</font></string>
    <string name="str_address_name">Tên Phòng Khám <font color='#0957DF'>*</font></string>
    <string name="str_address_address">Địa chỉ <font color='#0957DF'>*</font></string>
    <string name="str_add_user_phone">Số điện thoại <font color='#0957DF'>*</font></string>
</resources>