<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_menu_home"
        android:iconTint="@color/icon_gray"
        android:title="@string/tab_home"/>
    <item
        android:id="@+id/menu_customer"
        android:icon="@drawable/ic_menu_people"
        android:iconTint="@color/icon_gray"
        android:title="@string/tab_customer"/>
    <item
        android:id="@+id/menu_schedule"
        android:icon="@drawable/ic_calendar"
        android:iconTint="@color/icon_gray"
        android:title="Lịch khám"/>
    <item
        android:id="@+id/menu_notification"
        android:icon="@drawable/ic_menu_notification"
        android:iconTint="@color/icon_gray"
        android:title="Thông báo"/>
    <item
        android:id="@+id/menu_account"
        android:icon="@drawable/ic_menu_account"
        android:iconTint="@color/icon_gray"
        android:title="@string/tab_account"/>
</menu>