<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="#F9F9F9"
    android:layout_height="match_parent">

    <com.graduate.datn.custom.view.CustomHeaderView
        android:id="@+id/custom_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:leftDrawable="@drawable/ic_bg_back_doctor"
        app:rightDrawable="@null"
        app:title="@string/add_service_title" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/margin_16_dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_create"
        app:layout_constraintTop_toBottomOf="@+id/custom_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_avt"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="@dimen/margin_24_dp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="@dimen/margin_12_dp">

                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/imv_avt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/icon_image"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/imv_camera"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:backgroundTint="#0957DF"
                    android:scaleType="fitXY"
                    android:background="@drawable/image_camara" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30_dp"
            app:margin_start="10"
            android:text="@string/str_service_name"
            style="@style/roboto_bold_16dp"
            android:textColor="@color/black" />

        <com.graduate.datn.custom.view.InputView
            android:id="@+id/input_service_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_40_dp"
            android:layout_marginTop="@dimen/margin_12_dp"
            app:background_input_view="@drawable/bg_border_input_login"
            app:input_hint="Nhập tên Dịch vụ"
            app:layout_constraintTop_toBottomOf="@+id/cl_avt"
            app:left_drawable="@null"
            app:margin_start="12"
            app:type="login" />

        <TextView
            android:id="@+id/tv_title_address_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20_dp"
            app:margin_start="10"
            android:text="@string/str_service_barber_shop"
            style="@style/roboto_bold_16dp"
            android:textColor="@color/black" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_choose_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12_dp"
            android:background="@drawable/bg_border_input_login"
            app:layout_constraintTop_toBottomOf="@+id/input_service_name"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imv_chevron_right1"
                android:layout_width="@dimen/margin_20_dp"
                android:layout_height="@dimen/margin_20_dp"
                android:layout_marginEnd="14dp"
                android:src="@drawable/ic_chevron_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edt_address"
                style="@style/roboto_medium_16dp"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@null"
                android:focusable="false"
                android:hint="Chọn Phòng khám"
                android:paddingStart="@dimen/margin_14_dp"
                app:background_input_view="@drawable/bg_border_input_login"
                android:textColor="@color/color_text_title"
                android:textColorHint="@color/color_hint_text_search"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_20_dp"
        android:layout_marginHorizontal="@dimen/margin_16_dp"
        android:background="@drawable/bg_add_address"
        android:text="@string/add_service_complete"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>